--- a/src/app/shared/remote-config/flag-config-step/flag-config-step.component.html
+++ b/src/app/shared/remote-config/flag-config-step/flag-config-step.component.html
@@ -19,6 +19,7 @@
           "
           (sourceFolderSelected)="onSourceFolderSelect()"
           (destFolderSelected)="onDestFolderSelect()"
+          (cronExpressionChange)="onCronExpressionChange($event)"
         >
         </app-operation-config>
       }
